# skin-hearten-commerce

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  DEPLOY.md  Dockerfile  alembic.ini  pyproject.toml  skin_hearten.db
apps/api/alembic/versions/: 20260621_00_initial_schema.py  20260622_01_skin_quiz_lead_followup_fields.py  20260622_02_crm_base.py  20260622_03_crm_automations_base.py  20260622_04_crm_multichannel_reminders.py  20260622_05_payment_provider_payloads.py  20260622_06_order_admin_fields.py  20260622_07_shopify_import_jobs.py  20260622_08_product_reviews.py  20260623_01_product_media_manager.py  20260623_02_coupon_engine.py  20260624_01_coupon_checkout_hardening.py  20260626_01_verified_product_reviews.py  README.md
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  catalog.py  commerce.py  content.py  crm.py  enums.py  identity.py  imports.py  marketing.py
apps/api/app/schemas/: admin_customer.py  auth.py  blog.py  cart.py  catalog.py  checkout.py  coupon.py  crm.py  customer_orders.py  imports.py  intelligence.py  order.py  payment.py  review.py  skin_quiz.py
apps/api/app/services/: admin_customers.py  admin_orders.py  catalog_store.py  checkout.py  coupon_engine.py  crm.py  crm_automations.py  crm_reminders.py  customer_orders.py  intelligence.py  (+11 more)
apps/api/scripts/: seed_admin.py  seed_catalog.py
apps/api/skin_hearten_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+327 files in other folders)
