[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skin-hearten-api"
version = "0.1.0"
description = "FastAPI backend for Skin Hearten Commerce V1"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2.0",
  "azure-storage-blob>=12.24,<13.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "gunicorn>=23.0,<24.0",
  "passlib>=1.7.4,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pyodbc>=5.1,<6.0",
  "pydantic-settings>=2.6,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "python-multipart>=0.0.12,<1.0",
  "sqlalchemy>=2.0.36,<3.0",
  "uvicorn[standard]>=0.32,<1.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
